--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^3.6.11",
+    "@mantine/hooks": "^3.6.11",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
