--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@mantine/hooks": "^3.6.11",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-spring-bottom-sheet": "^3.4.0"
   },
   "devDependencies": {
     "eslint": "8.9.0",
