--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "^3.6.11",
     "@mantine/hooks": "^3.6.11",
+    "mapbox-gl": "^2.7.0",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
