--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@mantine/core": "^3.6.11",
     "@mantine/hooks": "^3.6.11",
+    "@mantine/next": "^3.6.11",
+    "lucide-react": "^0.17.2",
     "mapbox-gl": "^2.7.0",
     "next": "12.1.0",
     "react": "17.0.2",
