--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@mantine/core": "^3.6.11",
     "@mantine/hooks": "^3.6.11",
+    "lucide-react": "^0.17.2",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-phone-input-2": "^2.15.0",
     "react-spring-bottom-sheet": "^3.4.0"
   },
   "devDependencies": {
