--- a/functions/package.json
+++ b/functions/package.json
@@ -11,6 +11,7 @@
   "engines": {
     "node": "16"
   },
+  "type": "module",
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^9.8.0",
