--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-phone-input-2": "^2.15.0",
-    "react-spring-bottom-sheet": "^3.4.0"
+    "react-spring-bottom-sheet": "^3.4.0",
+    "twilio": "^3.75.0"
   },
   "devDependencies": {
     "eslint": "8.9.0",
