--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-fetch": "^2.6.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-flash-message": "^1.0.8",
     "react-phone-input-2": "^2.15.0",
     "react-spring-bottom-sheet": "^3.4.0"
   },
