--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,10 @@
   "type": "module",
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "firebase-admin": "^9.8.0",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.14.1",
+    "twilio": "^3.75.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
