--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/hooks": "^3.6.11",
     "@mantine/next": "^3.6.11",
     "firebase": "^9.6.7",
+    "firebase-functions": "^3.18.1",
     "local-ssl-proxy": "^1.3.0",
     "lucide-react": "^0.17.2",
     "mapbox-gl": "^2.7.0",
